inv-reader/environments/base/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kustomization-inventoryreader-backend
  labels:
    app: kustomization-inventoryreader-backend
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: kustomization-inventoryreader-backend
